objects/ASI_CRM_CalculatedSalesVolume__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_AccountsAdditionalField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet (Additional)</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Calculated Sales Volume</relationshipLabel>
        <relationshipName>Calculated_Sales_Volume</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Bottle__c</fullName>
        <label>Bottle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CalculatedSegmentation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Calculated Segmentation</label>
        <referenceTo>ASI_CRM_CalculatedSegmentation__c</referenceTo>
        <relationshipLabel>Calculated Sales Volume</relationshipLabel>
        <relationshipName>Calculated_Sales_Volume</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Company__c</fullName>
        <label>Company</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PRT</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Competitor__c</fullName>
        <label>Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Diageo</fullName>
                </value>
                <value>
                    <fullName>Edrington</fullName>
                </value>
                <value>
                    <fullName>Moet Hennessy</fullName>
                </value>
                <value>
                    <fullName>William Grant &amp; Sons</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Distell (Burn Stewart)</fullName>
                    <isActive>false</isActive>
                    <label>Distell (Burn Stewart)</label>
                </value>
                <value>
                    <fullName>Matisse</fullName>
                    <isActive>false</isActive>
                    <label>Matisse</label>
                </value>
                <value>
                    <fullName>Remy Cointreau</fullName>
                    <isActive>false</isActive>
                    <label>Remy Cointreau</label>
                </value>
                <value>
                    <fullName>Spey</fullName>
                    <isActive>false</isActive>
                    <label>Spey</label>
                </value>
                <value>
                    <fullName>Suntory</fullName>
                    <isActive>false</isActive>
                    <label>Suntory</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ExId__c</fullName>
        <label>Calculated Sales Volume ExId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Calculated Sales Volume</relationshipLabel>
        <relationshipName>Calculated_Sales_Volume</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PRTShare__c</fullName>
        <formula>IF(ASI_CRM_Total__c = 0, &apos;0&apos;, TEXT(ROUND((ASI_CRM_PRTVolume__c /  ASI_CRM_Total__c * 100),2)) + &apos; %&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PRT Share</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PRTVolume__c</fullName>
        <label>PRT Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Pre_Approval_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre-Approval Form</label>
        <referenceTo>ASI_HK_CRM_Pre_Approval_Form__c</referenceTo>
        <relationshipLabel>Calculated Sales Volume</relationshipLabel>
        <relationshipName>Calculated_Sales_Volume</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ProductCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Category</label>
        <referenceTo>ASI_HK_CRM_Product_Category__c</referenceTo>
        <relationshipLabel>Calculated Sales Volume</relationshipLabel>
        <relationshipName>Calculated_Sales_Volume</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Calculated Sales Volume</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CalculatedSegmentation__c</columns>
        <columns>ASI_CRM_Date__c</columns>
        <columns>ASI_CRM_Outlet__c</columns>
        <columns>ASI_CRM_AccountsAdditionalField__c</columns>
        <columns>ASI_CRM_ProductCategory__c</columns>
        <columns>ASI_CRM_PRTVolume__c</columns>
        <columns>ASI_CRM_Total__c</columns>
        <columns>ASI_CRM_PRTShare__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{YY}{MM}{0000}</displayFormat>
        <label>Calculated Sales Volume No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calculated Sales Volume</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_TW_CalculatedSalesVolume_RcrdTyp</fullName>
        <active>true</active>
        <label>ASI_CRM_TW Calculated Sales Volume</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Capacity</fullName>
        <active>true</active>
        <label>ASI CRM TW Capacity</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>